--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     build: './nginx'
     ports:
       - 9876:80
+    environment:
+      ETH_INDEXER_HOST: eth-indexer:3000
 
   eth-indexer:
     image: '404247308186.dkr.ecr.us-east-1.amazonaws.com/eth-indexer:latest'
