--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -18,9 +18,16 @@ http {
         return 405;
       }
 
+      set $expected_auth '${ETH_INDEXER_API_KEY}';
+      # empty string if not set
+      set $auth $http_authorization;
+      if ($expected_auth != $auth) {
+        return 403;
+      }
+
       # Only requests matching the whitelist expectations will
       # get sent to the application server
-      proxy_pass http://eth-indexer:3000/;
+      proxy_pass http://${ETH_INDEXER_HOST}/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
