--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -12,6 +12,13 @@ http {
   server {
     listen 80;
 
+    location /health {
+      proxy_pass http://${ETH_INDEXER_HOST}/v1/${ETH_NETWORK}/health;
+      limit_except GET {
+        deny all;
+      }
+    }
+
     location /eth/ {
       # Reject requests with unsupported HTTP method
       if ($request_method !~ ^(GET|POST|HEAD|OPTIONS)$) {
