--- a/cloudformation/main.yml
+++ b/cloudformation/main.yml
@@ -274,6 +274,16 @@ Resources:
         VPC: !GetAtt VPC.Outputs.VPC
         KeyName: !Ref KeyName
 
+  BastionHost:
+    Condition: SSHAccess
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub https://s3.amazonaws.com/${S3TemplatesPath}/bastion.yml
+      Parameters:
+        KeyName: !Ref KeyName
+        Subnet: !GetAtt VPC.Outputs.PublicSubnet1
+        SecurityGroup: !GetAtt SecurityGroups.Outputs.LoadBalancerSecurityGroup
+
   ALB:
     Type: AWS::CloudFormation::Stack
     Properties:
