--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -25,7 +25,7 @@ http {
         return 405;
       }
 
-      set $expected_auth '${ETH_INDEXER_API_KEY}';
+      set $expected_auth '${API_KEY}';
       # empty string if not set
       set $auth $http_authorization;
       if ($expected_auth != $auth) {
